Add content to Noting section on techniques page

--- a/techniques.html
+++ b/techniques.html
@@ -168,8 +168,14 @@
                 </ul>
             </div>
             <div id="techniques-text">  
-                <h5>Methods</h5>
-                <p></p>
+                <h5>Method</h5>
+                <p>In your comfortable meditation posture with eyes closed and after your conditioning. Bring your attention
+                    to your breath as your focus for your meditation. When you hear a sound make a mental note with the word 
+                    "sound". When you have a thought make a mental note with the word "thought". When you notice a sensation
+                    in your body make a mental note with the word "sensation". Try not to let the things you notice become a
+                    distraction as you will lose focus but try to bring yourself back to focussing on your breath after you
+                    have made a mental note. 
+                </p>
             </div>    
     </div>
 </section>
