Add rough content and sections to postures page. Add comments above each element in HTML of techniques page with a main element for main content

--- a/postures.html
+++ b/postures.html
@@ -48,10 +48,36 @@
 
 
     <!-- Main Section -->
+<main>
+    <section>
+        Introduction with parallax to match other pages 
+    </section>
 
     <section>
-        
+        conditioning 
     </section>
+
+    <section>
+        seated - floor
+    </section>
+
+    <section>
+        seated - chair 
+    </section>
+
+    <section>
+        lying down
+    </section>
+
+    <section>
+        standing
+    </section>
+
+    <section>
+        props
+    </section>
+
+</main>
     
 <!-- Footer -->
 <footer>
