Add content to postures.html introduction and adjust padding of text in postures and techniques intro

--- a/postures.html
+++ b/postures.html
@@ -52,17 +52,24 @@
             <h4>Introduction to Postures</h4>
             <p>The iconic crossed legged sitting position of meditation carries behind it great meaning but the 
                 origin of the meditation position is something very simple; this is how the practitioners
-                were sat when they practiced meditation. Even thought this makes your meditation position sound unimportant 
-                an uncomfortable position versus a comfortable one makes all the difference on how your practice goes. 
+                were sat when they practiced meditation. 
+                Even though this makes your meditation position sound unimportant. An uncomfortable position 
+                versus a comfortable one makes all the difference on how your practice goes. 
                 <br>
                 <br>
-                Over time and with meditation's growing popularity various postures have been developed to aid the practitioner
-                who doesn't find sitting in a cross legged position comfortable. There are also a number of props that can be used 
-                to support the body for holding postures for a longer period of time with minimal effort. 
+                The Buddha recommended sitting in one of four positions for meditation. 
+                These are: standing, sitting, lying down and walking. Below we have described how it is best to 
+                implement 3 of these postures and their variations. Experiment with each posture until you find one 
+                that best serves you.  
                 <br>
                 <br>
+                There are also a number of props that can be used to support the body for holding postures 
+                for a longer period of time with minimal effort and making it accesible to everybody. 
+                <br>
+                <br>
+                What is important is that with each posture is that you find balance between being calm and alertness.
+                Keeping the spine straight has been proven by science to help find this balance and mental clarity.
             </p>
-
         </div>
     </section>
 
