Add content and image to conditioning section on postures page

--- a/postures.html
+++ b/postures.html
@@ -74,7 +74,25 @@
     </section>
 
     <section>
-        conditioning 
+        <div>
+            <h4>Conditioning</h4>
+            <img id="left-posture-image" src="../images/conditioning.jpg" alt="woman sitting in seated meditation 
+            posture smiling in the sun">
+            <div>
+                <h5>What is it?</h5>
+                <p>Conditioning is an exercise that is good to practice before you start your meditation practice. It 
+                    helps you arrive in the space, the breath, the posture and sometimes with an intention you set for 
+                    your practice. It is a good way to prepare yourself to declare that you have set this time aside for 
+                    yourself to practice your meditation. 
+                </p>
+                <h5>Method</h5>
+                <p>In your chosen meditation posture with the eyes open find a soft focus on an unmoving point. 
+                    Take a big inhale through the nose and feel your abdomen expand; exhale fully. Repeat twice and then
+                    let the breath return to normal. Gently close the eyes and relax the shoulders. Slightly tuck the chin to 
+                    the chest and feel the rest of your body relax into the posture. Now begin your meditation practice.
+                </p>
+            </div>
+        </div>
     </section>
 
     <section>
