Add content and styling to postures.html for seated on the floor section

--- a/postures.html
+++ b/postures.html
@@ -75,7 +75,7 @@
 
     <section class="postures">
         <div class="postures-a">
-            <img id="left-posture-image" src="../assets/images/conditioning.jpg" alt="woman sitting in seated meditation 
+            <img id="postures-image" src="../assets/images/conditioning.jpg" alt="woman sitting in seated meditation 
             posture smiling in the sun">
             <div id="postures-a">
                 <h4>Conditioning</h4>
@@ -96,8 +96,29 @@
         </div>
     </section>
 
-    <section>
-        seated - floor
+    <section class="postures">
+        <div class="postures-b">
+            <img id="postures-image" src="../assets/images/seated-birdseye.jpg" alt="Person sat in seated meditation posture 
+            viewed from above">
+            <div id="postures-b">
+                <h4>Seated on the Floor</h4>
+                <h5>What is it?</h5>
+                <p>
+                    The classic posture linked with meditation. The seated posture is one used in many meditation practices due 
+                    to it keeping the practitioner balanced between calm and alert. It is also a good starting position as props 
+                    can be used to help make the position more comfortable and you are not likely to fall asleep in this pose. 
+                </p>
+                <h5>Method</h5>
+                <p>
+                    In this meditation posture you can sit directly on the floor with legs crossed. Feet should be under the knees
+                    and the knees should not be above the hips. Keep the spine straight and the shoulders relaxed away from the ears. 
+                    Hands can be placed with the palms facing up resting on top of the knees or thighs. Or you can loosly clasp the hands in 
+                    your lap in a mudra. Try to keep a curve in the lower back from rounding as it means your shoulders 
+                    are falling forwards and this in turn will cause back pain. You can also sit with your back against a wall for 
+                    support here and as you build up strength in this posture you can move to being away from the wall. 
+                </p>
+            </div>
+        </div>
     </section>
 
     <section>
