--- a/postures.html
+++ b/postures.html
@@ -110,8 +110,8 @@
                 </p>
                 <h5>Method</h5>
                 <p>
-                    In this meditation posture you can sit directly on the floor with legs crossed. Feet should be under the knees
-                    and the knees should not be above the hips. Keep the spine straight and the shoulders relaxed away from the ears. 
+                    In this meditation posture you can sit directly on the floor with legs crossed (feet should be under the knees
+                    and the knees should not be above the hips) or kneeling. Keep the spine straight and the shoulders relaxed away from the ears. 
                     Hands can be placed with the palms facing up resting on top of the knees or thighs. Or you can loosly clasp the hands in 
                     your lap in a mudra. Try to keep a curve in the lower back from rounding as it means your shoulders 
                     are falling forwards and this in turn will cause back pain. You can also sit with your back against a wall for 
@@ -121,20 +121,56 @@
         </div>
     </section>
 
-    <section>
-        seated - chair 
+    <section class="postures">
+        <div class="postures-a">
+            <img id="postures-image" src="" alt="">
+            <div id="postures-a">
+                <h4>Seated in a Chair</h4>
+                <h5>What is it?</h5>
+                <p></p>
+                <h5>Method</h5>
+                <p></p>
+            </div>
+        </div>
     </section>
 
-    <section>
-        lying down
+    <section class="postures">
+        <div class="postures-b">
+            <img id="postures-image" src="" alt="">
+            <div id="postures-b">
+                <h4>Lying Down</h4>
+                <h5>What is it?</h5>
+                <p></p>
+                <h5>Method</h5>
+                <p></p>
+            </div>
+        </div>
     </section>
 
-    <section>
-        standing
+    <section class="postures">
+        <div class="postures-a">
+            <img src="" alt="">
+            <div id="postures-a">
+                <h4>Standing</h4>
+                <h5>What is it?</h5>
+                <p></p>
+                <h5>Method</h5>
+                <p></p>
+            </div>
+        </div>
     </section>
 
-    <section>
-        props
+    <section class="postures">
+        <div class="postures-b">
+            <img id="postures-image" src="../assets/images/meditation-props.jpg" alt="meditation cushions on the ground">
+            <div id="postures-b">
+                <h4>Props</h4>
+                <h5>What are they?</h5>
+                <p></p>
+                <h5>Method</h5>
+                <p></p>
+            </div>
+        </div>
     </section>
 
 </main>
