Add content to postures.html page and edit current content

--- a/postures.html
+++ b/postures.html
@@ -104,18 +104,21 @@
                 <h4>Seated on the Floor</h4>
                 <h5>What is it?</h5>
                 <p>
-                    The classic posture linked with meditation. The seated posture is one used in many meditation practices due 
-                    to it keeping the practitioner balanced between calm and alert. It is also a good starting position as props 
-                    can be used to help make the position more comfortable and you are not likely to fall asleep in this pose. 
+                    The seated posture is one used in many meditation practices due to it keeping the practitioner balanced 
+                    between calm and alert. It is a good starting position as props can be used to help make the position 
+                    more comfortable.
                 </p>
                 <h5>Method</h5>
                 <p>
-                    In this meditation posture you can sit directly on the floor with legs crossed (feet should be under the knees
-                    and the knees should not be above the hips) or kneeling. Keep the spine straight and the shoulders relaxed away from the ears. 
-                    Hands can be placed with the palms facing up resting on top of the knees or thighs. Or you can loosly clasp the hands in 
-                    your lap in a mudra. Try to keep a curve in the lower back from rounding as it means your shoulders 
-                    are falling forwards and this in turn will cause back pain. You can also sit with your back against a wall for 
-                    support here and as you build up strength in this posture you can move to being away from the wall. 
+                    In this meditation posture you sit directly on the floor with legs crossed or kneeling. Keep the spine straight 
+                    and the shoulders relaxed. 
+                    Hands placed with the palms facing up resting on top of the knees or thighs. 
+                    Try to keep the curve in the lower back from rounding as this will cause back pain. 
+                </p>
+                <h5>Variations</h5>
+                <p>Your knees should not be above the hips in this position, if they are you may need to sit on a cushion. You can 
+                    sit with your back against a wall to start with a rolled up blanket at the curve of your lower back. You can also 
+                    sit on a chair with your feet placed on the ground. 
                 </p>
             </div>
         </div>
@@ -125,10 +128,12 @@
         <div class="postures-a">
             <img id="postures-image" src="" alt="">
             <div id="postures-a">
-                <h4>Seated in a Chair</h4>
+                <h4>Lying Down</h4>
                 <h5>What is it?</h5>
                 <p></p>
                 <h5>Method</h5>
+                <p></p>
+                <h5>Variations</h5>
                 <p></p>
             </div>
         </div>
@@ -138,10 +143,12 @@
         <div class="postures-b">
             <img id="postures-image" src="" alt="">
             <div id="postures-b">
-                <h4>Lying Down</h4>
+                <h4>Standing</h4>
                 <h5>What is it?</h5>
                 <p></p>
                 <h5>Method</h5>
+                <p></p>
+                <h5>Variations</h5>
                 <p></p>
             </div>
         </div>
@@ -151,23 +158,12 @@
         <div class="postures-a">
             <img src="" alt="">
             <div id="postures-a">
-                <h4>Standing</h4>
-                <h5>What is it?</h5>
-                <p></p>
-                <h5>Method</h5>
-                <p></p>
-            </div>
-        </div>
-    </section>
-
-    <section class="postures">
-        <div class="postures-b">
-            <img id="postures-image" src="../assets/images/meditation-props.jpg" alt="meditation cushions on the ground">
-            <div id="postures-b">
                 <h4>Props</h4>
                 <h5>What are they?</h5>
                 <p></p>
                 <h5>Method</h5>
+                <p></p>
+                <h5></h5>
                 <p></p>
             </div>
         </div>
