Add content to postures.html

--- a/postures.html
+++ b/postures.html
@@ -130,11 +130,20 @@
             <div id="postures-a">
                 <h4>Lying Down</h4>
                 <h5>What is it?</h5>
-                <p></p>
+                <p>A beneficial posture for those who find discomfort in a sitting posture even with the added props 
+                    for support. This posture is also used in lengthy meditations where discomfort or pain after a long 
+                    period of time is more likely. There is the risk of this posture leading to sleep during the meditation. 
+                </p>
                 <h5>Method</h5>
-                <p></p>
+                <p>Lying down on a comfortable surface let the legs extend long with the feet relaxed falling outwards. Have 
+                    the arms extended along the sides of the body with the shoulder blades slightly tucked down the back so the 
+                    palms are facing upwards. 
+                </p>
                 <h5>Variations</h5>
-                <p></p>
+                <p>If there is any lower back discomfort bend your knees and have your feet placed on the floor. You can also place 
+                    a rolled up blanket underneath the knees with legs extended. Hands can be placed on the torso, palms facing down
+                    if having them on the floor is uncomfortable.
+                </p>
             </div>
         </div>
     </section>
@@ -145,11 +154,17 @@
             <div id="postures-b">
                 <h4>Standing</h4>
                 <h5>What is it?</h5>
-                <p></p>
+                <p>Standing meditation is the most active of the postures and is a good choice if you struggle with staying
+                    awake during the lying down posture or you suffer pain in any sitting postures.</p>
                 <h5>Method</h5>
-                <p></p>
+                <p>It is better to do this posture without shoes on. Start by creating your foundation with your feet. Lift all 10 toes off the ground, spread them out and then 
+                    release them back to the ground. 
+                    Stand with your knees slightly bent. Roll the shoulders up towards the ears and 
+                    down the back so they stay relaxed and your chest becomes open. Turn the hands so the palms and elbow creases 
+                    are facing forwards. Slightly tuck the chin and the tailbone up towards your navel. 
+                </p>
                 <h5>Variations</h5>
-                <p></p>
+                <p>If standing becomes uncomfortable try walking whilst doing your meditation.</p>
             </div>
         </div>
     </section>
