Add content and images to postures.html

--- a/postures.html
+++ b/postures.html
@@ -126,7 +126,7 @@
 
     <section class="postures">
         <div class="postures-a">
-            <img id="postures-image" src="" alt="">
+            <img id="postures-image" src="../assets/images/lying.jpg" alt="woman lying down meditating">
             <div id="postures-a">
                 <h4>Lying Down</h4>
                 <h5>What is it?</h5>
@@ -150,36 +150,44 @@
 
     <section class="postures">
         <div class="postures-b">
-            <img id="postures-image" src="" alt="">
+            <img id="postures-image" src="../assets/images/standing.jpg" alt="woman standing in a meditation posture with 
+            fingers spread">
             <div id="postures-b">
                 <h4>Standing</h4>
                 <h5>What is it?</h5>
                 <p>Standing meditation is the most active of the postures and is a good choice if you struggle with staying
                     awake during the lying down posture or you suffer pain in any sitting postures.</p>
                 <h5>Method</h5>
-                <p>It is better to do this posture without shoes on. Start by creating your foundation with your feet. Lift all 10 toes off the ground, spread them out and then 
-                    release them back to the ground. 
-                    Stand with your knees slightly bent. Roll the shoulders up towards the ears and 
-                    down the back so they stay relaxed and your chest becomes open. Turn the hands so the palms and elbow creases 
-                    are facing forwards. Slightly tuck the chin and the tailbone up towards your navel. 
+                <p>It is better to do this posture without shoes on. Start by creating your foundation with your feet. Lift all 10 toes 
+                    off the ground, spread them out and then release them back to the ground. Stand with your knees slightly bent. Roll 
+                    the shoulders up towards the ears and down the back so they stay relaxed and your chest becomes open. Arms are dropped 
+                    to the sides  of the body with palms and elbow creases facing forwards. Slightly tuck the chin and 
+                    the tailbone up towards your navel. 
                 </p>
                 <h5>Variations</h5>
-                <p>If standing becomes uncomfortable try walking whilst doing your meditation.</p>
+                <p>If standing becomes uncomfortable try walking whilst doing your meditation. 
+                </p>
             </div>
         </div>
     </section>
 
     <section class="postures">
         <div class="postures-a">
-            <img src="" alt="">
+            <img id="postures-image" src="../assets/images/meditation-props.jpg" alt="Meditation cushion and mat on the ground">
             <div id="postures-a">
                 <h4>Props</h4>
                 <h5>What are they?</h5>
-                <p></p>
-                <h5>Method</h5>
-                <p></p>
-                <h5></h5>
-                <p></p>
+                <p>Props are useful pieces of equipment that can be invested in as your meditaiton practice grows to be used
+                    to help make your meditation posture more comfortable and lead to longer practices. 
+                </p>
+                <h5>Types of Props</h5>
+                <p>Sitting positions can be praciced on a bolster or cushion. There are specific cushions designed as meditation
+                    seats and other cushions that can be placed on the floor to make the contact with the knees on the ground more
+                    comfortable. 
+                    Bolsters can be used to sit on in the kneeling position with the bolster placed lengthways between your legs as 
+                    you sit on it. They can also be placed under the knees in the lying down position to alleviate any lower back 
+                    discomfort by making it flat to the ground. 
+                </p>
             </div>
         </div>
     </section>
