Change order of navigation bar. Correct signup.html title

--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>So Hum - Mudras</title>
+    <title>So Hum - Sign Up</title>
 
 
         <!-- Meta tags for search engines -->
@@ -36,8 +36,8 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="">Home</a></li>
-                <li><a href="techniques.html" class="">Techniques</a></li>
                 <li><a href="postures.html" class="">Postures</a></li>
+                <li><a href="techniques.html" class="">Techniques</a></li>
                 <li><a href="signup.html" class="active">Sign Up</a></li>
             </ul>
         </nav>
