Add media query for min-width 320px screens in css

--- a/postures.html
+++ b/postures.html
@@ -21,28 +21,28 @@
 <body>
     
 <!-- Header -->
-    <header>
-        <a href="index.html">
-        <h1>So Hum</h1>
-        </a>
-
-<!-- Nav Menu -->
-    <input type="checkbox" name="navigation" id="navigation-toggle">
-    <label for="navigation" class="navigation-label"><i class="fa-solid fa-spa"></i></label>
-    <nav>
-        <ul id="menu">
-            <li><a href="index.html" class="">Home</a></li>
-            <li><a href="postures.html" class="active">Postures</a></li>
-            <li><a href="techniques.html" class="">Techniques</a></li>
-            <li><a href="signup.html" class="">Sign Up</a></li>
-        </ul>
-    </nav>
-
+<header>
+    <a id="logo" href="index.html">
+    <h1>So Hum</h1>
+    </a>
     <div id="definition">
         <p>to inhale, to exhale</p>
     </div>
 
-    </header>
+<!-- Nav Menu -->
+<!--<input type="checkbox" name="nav-toggle" id="nav-toggle">
+<label for="navigation" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>-->
+
+<nav>
+    <ul id="menu">
+        <li><a href="index.html" class="">Home</a></li>
+        <li><a href="postures.html" class="active">Postures</a></li>
+        <li><a href="techniques.html" class="">Techniques</a></li>
+        <li><a href="signup.html" class="">Sign Up</a></li>
+    </ul>
+</nav>
+
+</header>
 
 
 <!-- Main Section -->
