--- a/signup.html
+++ b/signup.html
@@ -24,15 +24,18 @@
      <!-- Header -->
 
 
-        <header>
-            <a href="index.html">
-            <h1>So Hum</h1>
-            </a>
-        
-        <!-- Nav Menu -->
-    
-        <input type="checkbox" name="navigation" id="navigation-toggle">
-        <label for="navigation" class="navigation-label"><i class="fa-solid fa-spa"></i></label>
+<header>
+    <a id="logo" href="index.html">
+    <h1>So Hum</h1>
+    </a>
+        <div id="definition">
+            <p>to inhale, to exhale</p>
+        </div>
+
+<!-- Nav Menu -->
+    <!--<input type="checkbox" name="nav-toggle" id="nav-toggle">
+    <label for="navigation" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>-->
+
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="">Home</a></li>
@@ -42,11 +45,7 @@
             </ul>
         </nav>
 
-        <div id="definition">
-            <p>to inhale, to exhale</p>
-        </div>
-
-    </header>
+</header>
 
 
 <main class="sign-up-parallax">
