--- a/postures.html
+++ b/postures.html
@@ -30,17 +30,17 @@
     </div>
 
 <!-- Nav Menu -->
-<!--<input type="checkbox" name="nav-toggle" id="nav-toggle">
-<label for="navigation" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>-->
+    <input type="checkbox" name="nav-toggle" id="nav-toggle">
+    <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
 
-<nav>
-    <ul id="menu">
-        <li><a href="index.html" class="">Home</a></li>
-        <li><a href="postures.html" class="active">Postures</a></li>
-        <li><a href="techniques.html" class="">Techniques</a></li>
-        <li><a href="signup.html" class="">Sign Up</a></li>
-    </ul>
-</nav>
+    <nav>
+        <ul id="menu">
+            <li><a href="index.html" class="">Home</a></li>
+            <li><a href="postures.html" class="active">Postures</a></li>
+            <li><a href="techniques.html" class="">Techniques</a></li>
+            <li><a href="signup.html" class="">Sign Up</a></li>
+        </ul>
+    </nav>
 
 </header>
 
