Experiement with nav menu will need fixing

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </div>
     
     <!-- Nav Menu -->
-    <input type="checkbox" name="nav-toggle" id="nav-toggle">
-    <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+    <!--<input type="checkbox" name="nav-toggle" id="nav-toggle">
+    <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>-->
 
     <nav>
         <ul id="menu">
