--- a/index.html
+++ b/index.html
@@ -28,8 +28,16 @@
             <p>to inhale, to exhale</p>
         </div>
     
+    <!-- Nav Menu -->    
+    <nav>
+        <ul id="menu">
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="postures.html" class="">Postures</a></li>
+            <li><a href="techniques.html" class="">Techniques</a></li>
+            <li><a href="signup.html" class="">Sign Up</a></li>
+        </ul>
+    </nav>   
 
-    
     </header>
 
 
