--- a/signup.html
+++ b/signup.html
@@ -32,6 +32,15 @@
             <p>to inhale, to exhale</p>
         </div>
 
+<!-- Nav Menu -->    
+    <nav>
+        <ul id="menu">
+            <li><a href="index.html" class="">Home</a></li>
+            <li><a href="postures.html" class="">Postures</a></li>
+            <li><a href="techniques.html" class="">Techniques</a></li>
+            <li><a href="signup.html" class="active">Sign Up</a></li>
+        </ul>
+    </nav>   
 </header>
 
 
