--- a/techniques.html
+++ b/techniques.html
@@ -29,6 +29,15 @@
         <p>to inhale, to exhale</p>
     </div>
 
+<!-- Nav Menu -->    
+    <nav>
+        <ul id="menu">
+            <li><a href="index.html" class="">Home</a></li>
+            <li><a href="postures.html" class="">Postures</a></li>
+            <li><a href="techniques.html" class="active">Techniques</a></li>
+            <li><a href="signup.html" class="">Sign Up</a></li>
+        </ul>
+    </nav>   
 </header>
 
 <!-- Main content of page -->
