Add styling for nav mobile screens 320px

--- a/index.html
+++ b/index.html
@@ -27,9 +27,14 @@
         <div id="definition">
             <p>to inhale, to exhale</p>
         </div>
-    
+
     <!-- Nav Menu -->    
     <nav>
+
+     <!--Icon for menu on smaller screeners--> 
+     <label for="nav-menu" class="nav-menu-icon" tabindex="0"><i class="fa-solid fa-bars"></i></label>
+     <input type="checkbox" name="nav-menu" id="nav-menu">
+
         <ul id="menu">
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="postures.html" class="">Postures</a></li>
