Remove styling for nav experiementing with responsive menu

--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
         </div>
 
     <!-- Nav Menu -->    
-    <nav>
-
-     <!--Icon for menu on smaller screeners--> 
-     <label for="nav-menu" class="nav-menu-icon" tabindex="0"><i class="fa-solid fa-bars"></i></label>
-     <input type="checkbox" name="nav-menu" id="nav-menu">
-
+    <nav class="topnav">
         <ul id="menu">
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="postures.html" class="">Postures</a></li>
@@ -42,7 +37,6 @@
             <li><a href="signup.html" class="">Sign Up</a></li>
         </ul>
     </nav>   
-
     </header>
 
 
