Fix error after html checker

--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>So Hum - Sign Up</title>
 
 
         <!-- Meta tags for search engines -->
@@ -11,10 +10,10 @@
         <meta name="keywords" content="meditation postures, meditation, beginners meditation, So Hum, mudras">
     
     <!-- Title of website and favicon -->
-        <title>So Hum - Mudras</title>
-        <link rel="shortcut icon" href="assets/favicon_io/apple-touch-icon.png" type="apple-touch-icon">
-        <link rel="shortcut icon" href="assets/favicon_io/android-chrome-192x192.png" type="android-chrome-192x192">
-        <link rel="shortcut icon" href="assets/favicon_io/android-chrome-512x512.png" type="android-chrome-512x512">
+        <title>So Hum - Sign up</title>
+        <link rel="shortcut icon" href="assets/favicon_io/apple-touch-icon.png" type="image/png">
+        <link rel="shortcut icon" href="assets/favicon_io/android-chrome-192x192.png" type="image/png">
+        <link rel="shortcut icon" href="assets/favicon_io/android-chrome-512x512.png" type="image/png">
     
         <!-- style sheet link -->
         <link rel="stylesheet" href="../assets/css/style.css">
@@ -46,13 +45,13 @@
 
 <main class="sign-up-parallax">
     <section id="sign-up">
-        <form action="sign-up-form" action="" method="post" id="sign-up-form">
+        <form action="https://formdump.codeinstitute.net" method="post" id="sign-up-form">
             <h2>Join our group meditations near you</h2>
             <label for="firstname">First Name</label>
-            <input type="text" id="" name="firstname" class="text-input" required>
+            <input type="text" id="firstname" name="firstname" class="text-input" required>
             <br>
             <label for="lastname">Last Name</label>
-            <input type="text" id="" name="lastname" class="text-input" required>
+            <input type="text" id="lastname" name="lastname" class="text-input" required>
             <br>
             <label for="email">Email</label>
             <input type="email" id="email" name="email" class="text-input" required>
@@ -64,11 +63,11 @@
                 <div>
                     <h6>When do you want to meditate?</h6>
                     <label for="morning">Morning</label>
-                    <input type="radio" name="time-preference" id="" value="" required checked>
+                    <input type="radio" name="time-preference" id="morning" value="morning" required checked>
                     <label for="afternoon">Afternoon</label>
-                    <input type="radio" name="time-preference" id="" value="" required>
+                    <input type="radio" name="time-preference" id="afternoon" value="afternoon" required>
                     <label for="evening">Evening</label>
-                    <input type="radio" name="time-preference" id="" value="" required>
+                    <input type="radio" name="time-preference" id="evening" value="evening" required>
                 </div>
                 <br>
                 <div>
