--- a/techniques.html
+++ b/techniques.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>So Hum - Techniques</title>
 
 <!-- Meta tags for search engines -->
         <meta name="description" content="So Hum. A beginners meditation website explaining techniques and benefits of meditation.">
         <meta name="keywords" content="meditation postures, meditation, beginners meditation, So Hum, mudras">
     
 <!-- Title of website and favicon -->
-        <title>Techniques</title>
-        <link rel="shortcut icon" href="assets/favicon_io/apple-touch-icon.png" type="apple-touch-icon">
-        <link rel="shortcut icon" href="assets/favicon_io/android-chrome-192x192.png" type="android-chrome-192x192">
-        <link rel="shortcut icon" href="assets/favicon_io/android-chrome-512x512.png" type="android-chrome-512x512">
+    <title>So Hum - Techniques</title>
+    <link rel="shortcut icon" href="assets/favicon_io/apple-touch-icon.png" type="image/png">
+    <link rel="shortcut icon" href="assets/favicon_io/android-chrome-192x192.png" type="image/png">
+    <link rel="shortcut icon" href="assets/favicon_io/android-chrome-512x512.png" type="image/png">
     
 <!-- style sheet link -->
         <link rel="stylesheet" href="assets/css/style.css">
