--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <!-- Title of website and favicon -->
     <title>So Hum</title>
-    <link rel="shortcut icon" href="assets/favicon_io/apple-touch-icon.png" type="apple-touch-icon">
-    <link rel="shortcut icon" href="assets/favicon_io/android-chrome-192x192.png" type="android-chrome-192x192">
-    <link rel="shortcut icon" href="assets/favicon_io/android-chrome-512x512.png" type="android-chrome-512x512">
+    <link rel="shortcut icon" href="assets/favicon_io/apple-touch-icon.png" type="image/png">
+    <link rel="shortcut icon" href="assets/favicon_io/android-chrome-192x192.png" type="image/png">
+    <link rel="shortcut icon" href="assets/favicon_io/android-chrome-512x512.png" type="image/png">
 
     <!-- style sheet link -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -82,7 +82,6 @@
 <!-- Benefits section -->
 
     <section id="benefits" class="benefits-parallax">
-        <!-- <img src="assets/images/Main_monk_hands.jpg" alt="Monk hands clasped in lap wearing red robe"> -->
         <div id="benefits-text">
             <h3>Benefits of Meditation:</h3>
                 <ul>
