--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
     <!-- Nav Menu -->    
-    <nav class="topnav">
+    <nav>
         <ul id="menu">
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="postures.html" class="">Postures</a></li>
