--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
         <link rel="shortcut icon" href="assets/favicon_io/android-chrome-512x512.png" type="image/png">
     
         <!-- style sheet link -->
-        <link rel="stylesheet" href="../assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     
