--- a/postures.html
+++ b/postures.html
@@ -70,7 +70,7 @@
 
     <section class="postures">
         <div class="postures-a">
-            <img id="postures-image" src="../assets/images/conditioning.jpg" alt="woman sitting in seated meditation 
+            <img id="postures-image" src="assets/images/conditioning.jpg" alt="woman sitting in seated meditation 
             posture smiling in the sun">
             <div id="postures-a">
                 <h4>Conditioning</h4>
@@ -93,7 +93,7 @@
 
     <section class="postures">
         <div class="postures-b">
-            <img id="postures-image" src="../assets/images/seated-birdseye.jpg" alt="Person sat in seated meditation posture 
+            <img id="postures-image" src="assets/images/seated-birdseye.jpg" alt="Person sat in seated meditation posture 
             viewed from above">
             <div id="postures-b">
                 <h4>Seated on the Floor</h4>
@@ -121,7 +121,7 @@
 
     <section class="postures">
         <div class="postures-a">
-            <img id="postures-image" src="../assets/images/lying.jpg" alt="woman lying down meditating">
+            <img id="postures-image" src="assets/images/lying.jpg" alt="woman lying down meditating">
             <div id="postures-a">
                 <h4>Lying Down</h4>
                 <h5>What is it?</h5>
@@ -145,7 +145,7 @@
 
     <section class="postures">
         <div class="postures-b">
-            <img id="postures-image" src="../assets/images/standing.jpg" alt="woman standing in a meditation posture with 
+            <img id="postures-image" src="assets/images/standing.jpg" alt="woman standing in a meditation posture with 
             fingers spread">
             <div id="postures-b">
                 <h4>Standing</h4>
@@ -168,7 +168,7 @@
 
     <section class="postures">
         <div class="postures-a">
-            <img id="postures-image" src="../assets/images/meditation-props.jpg" alt="Meditation cushion and mat on the ground">
+            <img id="postures-image" src="assets/images/meditation-props.jpg" alt="Meditation cushion and mat on the ground">
             <div id="postures-a">
                 <h4>Props</h4>
                 <h5>What are they?</h5>
