--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <!-- Footer -->
     <footer>
-        <!-- add links in here to facebook, instagram, twitter and youtube -->
+        <!--Social media links-->
             <ul id="socialmedia">
                 <li><a href="http://www.facebook.com" target="_blank" rel="noopener"
                         aria-label="Visit our facebook page! Opens in a new tab" class="socialmedia"><i
