--- a/signup.html
+++ b/signup.html
@@ -91,7 +91,7 @@
 </main>
 <!-- Footer -->
 <footer>
-    <!-- add links in here to facebook, instagram and twitter -->
+    <!--Social media links-->
     <ul id="socialmedia">
         <li><a href="http://www.facebook.com" target="_blank" rel="noopener"
                 aria-label="Visit our facebook page! Opens in a new tab" class="socialmedia"><i
