Add correction for spellcheck

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             with fire gazing meditation to be one of the first practiced 200,000 years ago. 
             <br>
             <br>
-            The practices were passed on orally before being commited
+            The practices were passed on orally before being committed
             to writing. The earliest written records appear in the Hindu Vedas around 1500 BCE but they were believed to have been 
             practiced since 3000 BCE.
             <br>
@@ -105,10 +105,10 @@
             As you can see from the benefits above Meditation is not a selfish practice but a selfless one too. Plus it doesn't 
             have to be practiced alone. 
             <br>
-             The benfits of joining a group meditation are building a habit of attending, having a dedicated teacher at each practice,
+             The benefits of joining a group meditation are building a habit of attending, having a dedicated teacher at each practice,
              sharing your experience with others, the physical and mental health benefits of being involved in a social group. 
              <br>
-             Studies have also shown the ripple effect of practing your meditation in a peaceful environment surrounded by a group of 
+             Studies have also shown the ripple effect of practicing your meditation in a peaceful environment surrounded by a group of 
              likeminded people. 
              <br>
              <br>
