--- a/postures.html
+++ b/postures.html
@@ -59,7 +59,7 @@
                 <br>
                 <br>
                 There are also a number of props that can be used to support the body for holding postures 
-                for a longer period of time with minimal effort and making it accesible to everybody. 
+                for a longer period of time with minimal effort and making it accessible to everybody. 
                 <br>
                 <br>
                 What is important is that with each posture is that you find balance between being calm and alertness.
@@ -172,11 +172,11 @@
             <div id="postures-a">
                 <h4>Props</h4>
                 <h5>What are they?</h5>
-                <p>Props are useful pieces of equipment that can be invested in as your meditaiton practice grows to be used
+                <p>Props are useful pieces of equipment that can be invested in as your meditation practice grows to be used
                     to help make your meditation posture more comfortable and lead to longer practices. 
                 </p>
                 <h5>Types of Props</h5>
-                <p>Sitting positions can be praciced on a bolster or cushion. There are specific cushions designed as meditation
+                <p>Sitting positions can be practiced on a bolster or cushion. There are specific cushions designed as meditation
                     seats and other cushions that can be placed on the floor to make the contact with the knees on the ground more
                     comfortable. 
                     Bolsters can be used to sit on in the kneeling position with the bolster placed lengthways between your legs as 
