--- a/techniques.html
+++ b/techniques.html
@@ -44,7 +44,7 @@
 <section class="getting-started">
     <div id="getting-started-text">
         <h4>Getting Started</h4>
-        <p>Relax... Meditation comes in many forms and reeps benefits to the practitioner.
+        <p>Relax... Meditation comes in many forms and reaps benefits to the practitioner.
             To start, find a quiet place with little distraction for you to dedicate your time for your meditation.
             <br>
             <br>
@@ -58,7 +58,7 @@
             <br>
             <br>
             Below are some options to help you choose which one is best for you and your practice. You can also vary your
-            pratice by changing your technique.
+            practice by changing your technique.
         </p>
     </div>
 </section>
